# Low-Resolution-LPR

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_ocr_pipeline.sh
src/: analyze_results.py  benchmark.py  evaluate_ocr.py  prepare_dataset.py  prepare_ocr_dataset.py  train_ocr.py
src/ocr/: data.py  model.py  teacher_student.py  vocab.py
